# queryops-ai

./: .env.example  .gitignore  AGENTS.md  PROJECT_PLAN.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_empty_baseline.py  0002_product_schema.py  0003_it_operations_domain_schema.py  0004_access_context_foundation.py  0005_scope_aware_rls.py  0006_query_runtime_role.py  0007_dashboard_layout_version.py  0008_action_engine_foundation.py  0009_action_runtime_role.py  0010_disable_inactive_user_runtime.py
backend/app/: main.py
backend/app/action_engine/: __init__.py  action_dispatch.py  approval.py  audit.py  base.py  disable_execution.py  executor.py  notifications.py  policy.py  presentation.py  preview.py  registry.py  revalidation.py  runtime_role.py  service.py
backend/app/api/: responses.py
backend/app/auth/: __init__.py  access_context.py  access_policy.py  permissions.py  providers.py  session.py
backend/app/core/: config.py  rls.py
backend/app/dashboards/: __init__.py  editor.py  policy.py
backend/app/db/: base.py  session.py
backend/app/domains/: __init__.py
backend/scripts/: check_v1_readiness.py  inspect_m8_e2e.py  prepare_m8_e2e.py  run_evaluation.py  seed_it_operations.py
backend/tests/: action_postgres_test_db.py  test_access_context.py  test_action_execution_postgres.py  test_action_persistence.py  test_action_policy.py  test_action_preview_postgres.py  test_action_registry.py  test_action_security_release.py  test_actions_api.py  test_approvals_api.py  test_auth_session.py  test_card_refresh_api.py  test_card_refresh_postgres.py  test_dashboard_editor_api.py  test_dashboard_editor_layout.py  test_dashboard_editor_migration.py  test_dashboard_editor_postgres.py  test_dashboard_layout_postgres.py  test_dashboard_library_postgres.py  test_dashboards_api.py  test_db_foundation.py  test_disable_inactive_user.py  test_domain_pack_loader.py  test_evaluation_api.py  test_evaluation_cli.py  test_evaluation_dataset.py  test_evaluation_runner.py  test_evaluation_runner_postgres.py  test_evaluation_scoring.py  test_exports_api.py  test_exports_postgres.py  test_health.py  test_home_api.py  test_home_postgres.py  test_it_operations_domain_schema.py  test_llm_provider.py  test_m8_e2e_database.py  test_openai_provider.py  test_permissions.py  test_product_schema.py  (+21 more)
(+306 files in other folders)
