[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "queryops-backend"
version = "0.1.0"
description = "FastAPI backend for QueryOps AI"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13,<2.0",
    "faker>=25.0,<40.0",
    "fastapi>=0.115,<0.116",
    "psycopg[binary]>=3.2,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn>=0.30,<0.35",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
