[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "queryops-backend"
version = "0.1.0"
description = "FastAPI backend for QueryOps AI"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13,<2.0",
    "faker>=25.0,<40.0",
    "fastapi>=0.115,<0.116",
    "openai>=2.15,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn>=0.30,<0.35",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pyright>=1.1.400,<2.0",
    "pytest>=8.0,<9.0",
    "ruff>=0.12,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = [
    "app/evaluation/readiness.py",
    "app/evaluation/readiness_service.py",
    "app/query_engine/llm_provider.py",
    "app/query_engine/provider_config.py",
    "scripts/check_v1_readiness.py",
]
exclude = ["alembic"]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
